--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="description" content="inconnu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maureen et Jérémie</title>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfFehYqAAAAAN7XSa93DJ7Kcliu-iH10Oxy7Z5W" defer></script>
+
 </head>
 <body>
     <div id="root"></div>
